--- a/client.html
+++ b/client.html
@@ -1,15 +1,19 @@
+<!DOCTYPE html>
 </html>
   <head>
     <h1>Hello!</h1>
   </head>
   <body>
-    <!-- <script> -->
+    <!-- <script src="node_modules/socket.io/socket.io.js"></script> -->
+    <script src="https://cdn.socket.io/3.1.3/socket.io.min.js" integrity="sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh" crossorigin="anonymous"></script>
+    <script type= 'module' src='js/client.js'></script>
+     <!-- <script> -->
       <!-- let d  = new Date(); -->
       <!-- alert("Today's date is " + d); -->
       <!-- console.log(d); -->
       <!-- document.body.innerHTML = "<h1> Today's date is " + d + "</h1>"; -->
     <!-- </script> -->
-    <script src='js/client.js'></script>
+   <!-- <script type='module' src='js/client.js'></script> -->
   </body>
 <html>
 
