--- a/client.html
+++ b/client.html
@@ -19,9 +19,7 @@
       <!-- <canvas id='section_map' width='800' height='800' style='border:1px solid #eed49f;'> -->
     </div>
     </canvas>
-    <script>
-      const canvas = document.getElementById('section_map')
-    </script>
+    <script src='js/client.js'></script>
     <div class='text-container'>
       <h2 style='color:#c6a0f6;' >(800, 800)</h1>
     </div>
