--- a/client.html
+++ b/client.html
@@ -24,7 +24,7 @@
       <h2 style='color:#c6a0f6;' >(800, 800)</h1>
     </div>
 
-    <link rel='stylesheet' href='client.css'>
+    <link rel='stylesheet' href='/client.css'>
 
   <!-- <script type='module' src='js/client.js'></script> -->
   </body>
