--- a/client.html
+++ b/client.html
@@ -4,25 +4,14 @@
     <h1>Hello!</h1>
   </head>
   <body style="background-color:#24273a;">
+    <script type='module' src='./js/client.js'></script>
     <script>
       let d  = new Date();
-      <!-- alert("Today's date is " + d); -->
       console.log(d);
       document.body.innerHTML = "<div class='text-container'><h1 style='color:#c6a0f6;' > Today's date is " + d + "</h1></div>";
     </script>
  
     <!-- <script src="node_modules/socket.io/socket.io.js"></script> -->
-    <script src="https://cdn.socket.io/3.1.3/socket.io.min.js" integrity="sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh" crossorigin="anonymous"></script>
-    <!-- <script type= 'module' src='js/client.js'></script> -->
-    <div class='canvas-container'>
-      <canvas id='section_map' width='800' height='800' style='border:1px solid #f5a97f;'>
-      <!-- <canvas id='section_map' width='800' height='800' style='border:1px solid #eed49f;'> -->
-    </div>
-    </canvas>
-    <script src='js/client.js'></script>
-    <div class='text-container'>
-      <h2 style='color:#c6a0f6;' >(800, 800)</h1>
-    </div>
 
     <link rel='stylesheet' href='/client.css'>
 
