--- a/client.html
+++ b/client.html
@@ -4,18 +4,21 @@
     <h1>Hello!</h1>
   </head>
   <body style="background-color:#24273a;">
-    <script type='module' src='./js/client.js'></script>
     <script>
       let d  = new Date();
       console.log(d);
       document.body.innerHTML = "<div class='text-container'><h1 style='color:#c6a0f6;' > Today's date is " + d + "</h1></div>";
     </script>
- 
-    <!-- <script src="node_modules/socket.io/socket.io.js"></script> -->
-
+    <script type='module' src='./js/client.js'></script>
     <link rel='stylesheet' href='/client.css'>
+    <div class='canvas-container'>
+      <canvas id='section_map' width='800' height='800' style='border:1px solid #f5a97f;'>
+      <!-- <canvas id='section_map' width='800' height='800' style='border:1px solid #eed49f;'> -->
+    </div>
+    <div class='text-container'>
+      <h2 style='color:#c6a0f6;' >(800, 800)</h1>
+    </div>
 
-  <!-- <script type='module' src='js/client.js'></script> -->
-  </body>
+   </body>
 <html>
 
